<resources>
    <string name="app_name">Chore Divvy</string>
    <string name="logo_description">Chore Divvy logo</string>
    <string name="username_edit_hint">Email</string>
    <string name="password_edit_hint">Password</string>
    <string name="first_name_edit_hint">First Name</string>
    <string name="last_name_edit_hint">Last Name</string>
    <string name="login_button_text">Login</string>
    <string name="sign_up_button_text">Sign Up</string>
    <string name="forgot_password_button_text">Forgot Password?</string>
    <string name="send_link_button_text">Send Link</string>
    <string name="forgot_password_text">Enter your email address and we will send you a link to reset your password.</string>
    <string name="chore_item_check_box_image">Check box for chore status</string>
    <string name="choreName_edit_hint">Chore Name</string>
    <string name="notes_edit_text_hint">Notes</string>
    <string name="status_spinner_hint">Status</string>
    <string name="frequency_spinner_hint">Frequency</string>
    <string name="category_spinner_hint">Category</string>
    <string name="difficulty_spinner_hint">Difficulty</string>
    <string name="addChore_button_text">Add Chore</string>
    <string name="save_button_text">Save</string>
    <string name="sign_out_menu_item_text">Sign out</string>
    <string name="edit_menu_item_text">Edit</string>
    <string name="delete_menu_item_text">Delete</string>
    <string name="sign_up_link_text">Don\'t have an account? Sign up</string>
    <string name="delete_button_text">Delete</string>
    <string name="edit_button_text">Edit</string>
    <string name="choreName_detail_text">&lt;b>Chore:&lt;/b> %1$s</string>
    <string name="status_detail_text">&lt;b>Status:&lt;/b> %1$s</string>
    <string name="assignee_detail_text">&lt;b>Assigned to:&lt;/b> %1$s %2$s</string>
    <string name="frequency_detail_text">&lt;b>Frequency:&lt;/b> %1$s</string>
    <string name="category_detail_text">&lt;b>Category:&lt;/b> %1$s</string>
    <string name="difficulty_detail_text">&lt;b>Difficulty:&lt;/b> %1$s</string>
    <string name="notes_detail_text">&lt;b>Notes:&lt;/b> %1$s</string>
    <string name="categoryName_edit_hint">Category Name</string>
    <string name="addCategory_button_text">Add category</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>