<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.doug2d2.chore_divvy_android.chore.AddChoreViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/marginTopBottom"
            android:gravity="center_horizontal|top"
            android:orientation="vertical"
            tools:context=".chore.AddChoreFragment">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="#00000000"
                android:layout_marginStart="@dimen/marginStartEnd"
                android:layout_marginEnd="@dimen/marginStartEnd" >

                <EditText
                    android:id="@+id/choreNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/marginBetweenElements"
                    android:ems="10"
                    android:maxLength="25"
                    android:hint="@string/choreName_edit_hint"
                    android:inputType="textCapWords"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp"
                    android:text="@={viewModel.choreName}" />

            </com.google.android.material.textfield.TextInputLayout>

            <fr.ganfra.materialspinner.MaterialSpinner
                android:id="@+id/frequencyDropDown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marginStartEnd"
                android:layout_marginEnd="@dimen/marginStartEnd"
                android:layout_marginBottom="@dimen/marginBetweenElements"
                app:ms_hint="@string/frequency_spinner_hint"
                app:ms_highlightColor="@color/colorPrimary" />

            <fr.ganfra.materialspinner.MaterialSpinner
                android:id="@+id/categoryDropDown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marginStartEnd"
                android:layout_marginEnd="@dimen/marginStartEnd"
                android:layout_marginBottom="@dimen/marginBetweenElements"
                app:ms_hint="@string/category_spinner_hint"
                app:ms_highlightColor="@color/colorPrimary" />

            <fr.ganfra.materialspinner.MaterialSpinner
                android:id="@+id/difficultyDropDown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marginStartEnd"
                android:layout_marginEnd="@dimen/marginStartEnd"
                android:layout_marginBottom="@dimen/marginBetweenElements"
                app:ms_hint="@string/difficulty_spinner_hint"
                app:ms_highlightColor="@color/colorPrimary" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="#00000000"
                android:layout_marginStart="@dimen/marginStartEnd"
                android:layout_marginEnd="@dimen/marginStartEnd" >

                <EditText
                    android:id="@+id/notesEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/marginBetweenElements"
                    android:ems="10"
                    android:maxLength="25"
                    android:hint="@string/notes_edit_text_hint"
                    android:inputType="text"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp"
                    android:lines="5"
                    android:text="@={viewModel.notes}" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/addChoreButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/marginBetweenElements"
                android:enabled="@{viewModel.addChoreButtonEnabled}"
                android:text="@string/addChore_button_text"
                android:layout_centerInParent="true"
                android:onClick="@{() -> viewModel.onAddChore()}"/>

        </LinearLayout>

    </ScrollView>

</layout>